--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "react-repeta",
   "version": "0.1.0",
   "private": true,
-  "homepage":"https://gevko-vasyl.github.io/react-repeta",
+  "homepage": "https://gevko-vasyl.github.io/react-repeta",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.10",
     "@testing-library/react": "^11.2.5",
@@ -15,7 +15,7 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy":"npm run build",
+    "predeploy": "npm run build",
     "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
@@ -39,6 +39,9 @@
     ]
   },
   "devDependencies": {
-    "gh-pages": "^3.1.0"
+    "gh-pages": "^3.1.0",
+    "husky": "^5.2.0",
+    "lint-staged": "^10.5.4",
+    "prettier": "^2.2.1"
   }
 }
